--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "NewApp",
+  "name": "HSearch",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -19,7 +19,8 @@
     "react-native-gesture-handler": "^1.8.0",
     "react-native-modals": "^0.19.9",
     "react-native-reanimated": "^1.13.1",
-    "react-native-safe-area-context": "^3.1.8",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^2.13.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
